# Electronic-Photo-Album-OpenSource-

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  app.py  auth.py  config.py  docker-compose.yml  extensions.py  preview-compare.html  preview-tablet-2800x1800.html  pyproject.toml  requirements.txt  test_route.py  需求文档.md
.github/workflows/: build.yml
android_project/: settings.gradle.kts
android_project/.github/workflows/: build.yml
android_project/app/: build.gradle.kts  debug.keystore
android_project/app/src/main/: AndroidManifest.xml
android_project/app/src/main/java/com/onetwo/photoframe/: MainActivity.kt
android_project/app/src/main/res/values/: strings.xml
docs/: 2026-03-20-progress-summary.md  Baota-deployment.md  CONTRIBUTING.md  auth.md  configuration.md  deployment.md
models/: photo.py
routes/: __init__.py  admin.py  api.py  health.py  main.py  messages.py  recommendation.py  upload.py
services/: __init__.py  database.py  image.py  metadata.py  photo_index.py  recommendation.py
static/: script.js  style.css
templates/: admin.html  index.html  login.html  manage.html
tests/: README.md  conftest.py  test_auth.py  test_config.py  test_database.py  test_recommendation.py  test_routes.py  test_upload.py
tools/: manage_users.py
